Pod Creation/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-public
spec:
  containers:
  - name: nginx
    image: nginx:latest # public image from Docker Hub
    ports:
    - containerPort: 80
