Pod Creation/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080           # Service port
      targetPort: 80   # Pod container port
  type: ClusterIP       # default, can be omitted
