Pod Creation/nodport.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-pod-nodeport-service
  namespace: project1
spec:
  type: NodePort 
  selector:
    app: nginx 
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
      nodePort: 31231 # NodePort
